Found and uploaded pictures, set up an array of the cards

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Memory Mayhem</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <script type="text/javascript" src="js/app.js" defer></script>
+        <script type="text/javascript" src="js/memory.js" defer></script>
+
+        <div id='score'>Score: <span id='scoreNum'>0</span>
+        </div>
+
+        <div id='grid'></div>
+
     </body>
 </html>
