Set up 12 card grid for game

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id='score'>Score: <span id='scoreNum'>0</span>
         </div>
 
-        <div id='grid'></div>
+        <div id='board'></div>
 
     </body>
 </html>
