Took the whole night, but finally got flipTheCard to work

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <script type="text/javascript" src="js/memory.js" defer></script>
 
-        <div id='score'>Score: <span id='scoreNum'>0</span>
+        <div class='score'>Score: <span id='scoreNum'>0</span>
         </div>
 
-        <div id='board'></div>
+        <div class='board'></div>
 
     </body>
 </html>
