Removed alerts and added a messages div instead

--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
     <head>
         <title>Memory Mayhem</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <script type="text/javascript" src="js/memory.js" defer></script>
 
-        <div class='score'>Score: <span id='scoreNum'>0</span>
+        <div class='score'>Score: <span id='scoreNum'></span>
         </div>
 
         <div class='board'></div>
+
+        <div class='messages'></div>
 
     </body>
 </html>
