Added a Halloween themed board

--- a/hallo-index.html
+++ b/hallo-index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <script type="text/javascript" src="js/memory.js" defer></script>
+        <script type="text/javascript" src="js/halloween.js" defer></script>
         <h1>Welcome to Memory Mayhem</h1>
 
         <div id='header'>
