--- a/gogh-index.html
+++ b/gogh-index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Memory Mayhem</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <script type="text/javascript" src="js/memory.js" defer></script>
         <h1>Welcome to Memory Mayhem</h1>
+
+        <div id='header'>
+            <div class='score'>Score: <span id='scoreNum'></span></div>
+            <div><button type='button' onclick="location.reload()" id="restart">Restart</button></div>
+        </div>
+      
+        <div class='board'></div>
+
+        <div class='messages'></div>
 
     </body>
 </html>
