Added main page, added buttons to different versions of the game

--- a/animals-index.html
+++ b/animals-index.html
@@ -9,16 +9,17 @@
     </head>
     <body>
         <script type="text/javascript" src="js/animals.js" defer></script>
-        <h1>Welcome to Memory Mayhem</h1>
+        <h1>Animal Memory Mayhem</h1>
 
         <div id='header'>
             <div class='score'>Score: <span id='scoreNum'></span></div>
-            <div><button type='button' onclick="location.reload()" id="restart">Restart</button></div>
+            <div><button type='button' onclick="location.reload()" id="buttons">Restart</button></div>
         </div>
       
         <div class='board'></div>
 
         <div class='messages'></div>
+        <button type="button" id="buttons" class="mainpage" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/index.html'">Back to Main Menu</button>
 
     </body>
 </html>
