--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     </head>
     <body>
         <h1>Welcome to Memory Mayhem</h1>
-
+        <h2>Which version would you like to play?</h2>
+        <div>
+            <button type="button" id="buttons" class="vangogh" onclick= "location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/gogh-index.html'">Van Gogh Memory</button>
+            <button type="button" id="buttons" class="animal" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/animals-index.html'">Animals Memory</button>
+            <button type="button" id="buttons" class="halloween" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/hallo-index.html'">Halloween Memory</button>
+        </div>
     </body>
 </html>
