--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
     <body>
         <h1>Welcome to Memory Mayhem</h1>
         <h2>Which version would you like to play?</h2>
-        <div>
+        <br />
+        <br />
+        <div id="whichgame">
+            <div>
+            <img src="vanGogh-images/vangoghcover.png"><br />
             <button type="button" id="buttons" class="vangogh" onclick= "location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/gogh-index.html'">Van Gogh Memory</button>
+            </div>
+            <div>
+            <img src="animal-images/animalscover.png"><br />
             <button type="button" id="buttons" class="animal" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/animals-index.html'">Animals Memory</button>
+            </div>
+            <div>
+            <img src="halloween-images/halloweencover.png"><br />
             <button type="button" id="buttons" class="halloween" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/hallo-index.html'">Halloween Memory</button>
+            </div>
         </div>
     </body>
 </html>
