Added a Hard Version of Van Gogh game

--- a/gogh-hard-index.html
+++ b/gogh-hard-index.html
@@ -8,17 +8,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <script type="text/javascript" src="js/vangogh.js" defer></script>
-        <h1>Van Gogh Memory Mayhem</h1>
+        <script type="text/javascript" src="js/vangoghHard.js" defer></script>
+        <h1>Van Gogh Memory Mayhem - Hard Edition</h1>
 
         <div id='header'>
             <div class='score'>Score: <span id='scoreNum'></span></div>
-            <div>
-            <button type='button' onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/gogh-hard-index.html'" id="buttons">Hard Version</button></div>
+            <div><button type='button' onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/gogh-index.html'" id="buttons">Regular Version</button></div>
             <div><button type='button' onclick="location.reload()" id="buttons">Restart</button></div>
         </div>
       
-        <div class='board'></div>
+        <div class='board' id='hardboard'></div>
 
         <div class='messages'></div>
         <button type="button" id="buttons" class="mainpage" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/index.html'">Back to Main Menu</button>
