DRY'd up a tonne of  code with the class MemoryGame

--- a/animals-hard-index.html
+++ b/animals-hard-index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <script type="text/javascript" src="/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/dryitout/dryitout.js" defer></script>
         <script type="text/javascript" src="js/animalsHard.js" defer></script>
         <h1>Animal Memory Mayhem - Hard Edition</h1>
 
