--- a/hallo-index.html
+++ b/hallo-index.html
@@ -8,11 +8,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <script type="text/javascript" src="/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/dryitout/dryitout.js" defer></script>
         <script type="text/javascript" src="js/halloween.js" defer></script>
         <h1>Halloween Memory Mayhem</h1>
 
         <div id='header'>
             <div class='score'>Score: <span id='scoreNum'></span></div>
+            <div><button type='button' onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/hallo-hard-index.html'" id="buttons">Hard Version</button>
+            </div>
             <div><button type='button' onclick="location.reload()" id="buttons">Restart</button></div>
         </div>
       
