Added music to the hard levels of each game

--- a/gogh-hard-index.html
+++ b/gogh-hard-index.html
@@ -21,7 +21,10 @@
         <div class='board' id='hardboard'></div>
 
         <div class='messages'></div>
-        <button type="button" id="buttons" class="mainpage" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/index.html'">Back to Main Menu</button>
-
+        <div>
+            <button type="button" id="buttons" class="music" onclick="vanGoghMusic()">Play Music</button>
+            <button type="button" id="buttons" class="music" onclick="stopVanGoghMusic()">No Music</button><br />
+            <button type="button" id="buttons" class="mainpage" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/index.html'">Back to Main Menu</button>
+        </div>     
     </body>
 </html>
