Updated all links to the Relative Path

--- a/gogh-hard-index.html
+++ b/gogh-hard-index.html
@@ -8,13 +8,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <script type="text/javascript" src="/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/dryitout/dryitout.js" defer></script>
+        <script type="text/javascript" src="dryitout/dryitout.js" defer></script>
         <script type="text/javascript" src="js/vangoghHard.js" defer></script>
         <h1>Van Gogh Memory Mayhem - Hard Edition</h1>
 
         <div id='header'>
             <div class='score'>Score: <span id='scoreNum'></span></div>
-            <div><button type='button' onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/gogh-index.html'" id="buttons">Regular Version</button></div>
+            <div><button type='button' onclick="location.href='gogh-index.html'" id="buttons">Regular Version</button></div>
             <div><button type='button' onclick="location.reload()" id="buttons">Restart</button></div>
         </div>
       
@@ -24,7 +24,7 @@
         <div>
             <button type="button" id="buttons" class="music" onclick="vanGoghMusic()">Play Music</button>
             <button type="button" id="buttons" class="music" onclick="stopVanGoghMusic()">No Music</button><br />
-            <button type="button" id="buttons" class="mainpage" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/index.html'">Back to Main Menu</button>
+            <button type="button" id="buttons" class="mainpage" onclick="location.href='index.html'">Back to Main Menu</button>
         </div>     
     </body>
 </html>
