--- a/animals-index.html
+++ b/animals-index.html
@@ -8,13 +8,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <script type="text/javascript" src="/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/dryitout/dryitout.js" defer></script>
+        <script type="text/javascript" src="dryitout/dryitout.js" defer></script>
         <script type="text/javascript" src="js/animals.js" defer></script>
         <h1>Animal Memory Mayhem</h1>
 
         <div id='header'>
             <div class='score'>Score: <span id='scoreNum'></span></div>
-            <div><button type='button' onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/animals-hard-index.html'" id="buttons">Hard Version</button>
+            <div><button type='button' onclick="location.href='animals-hard-index.html'" id="buttons">Hard Version</button>
             </div>
             <div><button type='button' onclick="location.reload()" id="buttons">Restart</button></div>
         </div>
@@ -22,6 +22,6 @@
         <div class='board'></div>
 
         <div class='messages'></div>
-        <button type="button" id="buttons" class="mainpage" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/index.html'">Back to Main Menu</button>
+        <button type="button" id="buttons" class="mainpage" onclick="location.href='index.html'">Back to Main Menu</button>
     </body>
 </html>
