--- a/gogh-index.html
+++ b/gogh-index.html
@@ -8,21 +8,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <script type="text/javascript" src="/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/dryitout/dryitout.js" defer></script>
+        <script type="text/javascript" src="dryitout/dryitout.js" defer></script>
         <script type="text/javascript" src="js/vangogh.js" defer></script>
         <h1>Van Gogh Memory Mayhem</h1>
 
         <div id='header'>
             <div class='score'>Score: <span id='scoreNum'></span></div>
             <div>
-            <button type='button' onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/gogh-hard-index.html'" id="buttons">Hard Version</button></div>
+            <button type='button' onclick="location.href='gogh-hard-index.html'" id="buttons">Hard Version</button></div>
             <div><button type='button' onclick="location.reload()" id="buttons">Restart</button></div>
         </div>
       
         <div class='board'></div>
 
         <div class='messages'></div>
-        <button type="button" id="buttons" class="mainpage" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/index.html'">Back to Main Menu</button>
+        <button type="button" id="buttons" class="mainpage" onclick="location.href='index.html'">Back to Main Menu</button>
 
     </body>
 </html>
