--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <div id="whichgame">
             <div>
             <img id="main" src="vanGogh-images/vangoghcover.png"><br />
-            <button type="button" id="buttons" class="vangogh" onclick= "location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/gogh-index.html'">Van Gogh Memory</button>
+            <button type="button" id="buttons" class="vangogh" onclick= "location.href='gogh-index.html'">Van Gogh Memory</button>
             </div>
             <div>
             <img id="main" src="animal-images/animalscover.png"><br />
-            <button type="button" id="buttons" class="animal" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/animals-index.html'">Animals Memory</button>
+            <button type="button" id="buttons" class="animal" onclick="location.href='animals-index.html'">Animals Memory</button>
             </div>
             <div>
             <img id="main" src="halloween-images/halloweencover.png"><br />
-            <button type="button" id="buttons" class="halloween" onclick="location.href='/Users/suzyq/Desktop/GA/sei-bromeliad/projects/project-1-memorymayhem/Project1-memory-mayhem/hallo-index.html'">Halloween Memory</button>
+            <button type="button" id="buttons" class="halloween" onclick="location.href='hallo-index.html'">Halloween Memory</button>
             </div>
         </div>
     </body>
