--- a/animals-hard-index.html
+++ b/animals-hard-index.html
@@ -13,9 +13,10 @@
         <h1>Animal Memory Mayhem - Hard Edition</h1>
 
         <div id='header'>
-            <div class='score'>Score: <span id='scoreNum'></span></div>
+            <div class='score'>Matches: <span id='scoreNum'></span><div>Attempts: <span id='attempts'></span></div></div>
             <div><button type='button' onclick="location.href='animals-index.html'" id="buttons">Regular Version</button></div>
-            <div><button type='button' onclick="location.reload()" id="buttons">Restart</button></div>
+            <div><button type='button' onclick="location.reload()" id="buttons">Restart</button><br />
+                <button type="button" id="buttons" class="mainpage" onclick="location.href='index.html'">Main Menu</button></div>
         </div>
       
         <div class='board'  id="hardboard"></div>
@@ -24,7 +25,6 @@
         <div>
             <button type="button" id="buttons" class="music" onclick="animalMusic()">Play Music</button>
             <button type="button" id="buttons" class="music" onclick="stopAnimalMusic()">No Music</button><br />
-            <button type="button" id="buttons" class="mainpage" onclick="location.href='index.html'">Back to Main Menu</button>
         </div>
 
     </body>
