--- a/gogh-hard-index.html
+++ b/gogh-hard-index.html
@@ -13,9 +13,15 @@
         <h1>Van Gogh Memory Mayhem - Hard Edition</h1>
 
         <div id='header'>
-            <div class='score'>Score: <span id='scoreNum'></span></div>
-            <div><button type='button' onclick="location.href='gogh-index.html'" id="buttons">Regular Version</button></div>
-            <div><button type='button' onclick="location.reload()" id="buttons">Restart</button></div>
+            <div class='score'>Matches: <span id='scoreNum'></span>
+             <div>Attempts: <span id='attempts'></span></div></div>
+            <div>
+                <button type='button' onclick="location.href='gogh-index.html'" id="buttons">Regular Version</button>
+            </div>
+            <div>
+                <button type='button' onclick="location.reload()" id="buttons">Restart</button><br />
+                <button type="button" id="buttons" class="mainpage" onclick="location.href='index.html'">Main Menu</button>
+            </div>
         </div>
       
         <div class='board' id='hardboard'></div>
@@ -24,7 +30,6 @@
         <div>
             <button type="button" id="buttons" class="music" onclick="vanGoghMusic()">Play Music</button>
             <button type="button" id="buttons" class="music" onclick="stopVanGoghMusic()">No Music</button><br />
-            <button type="button" id="buttons" class="mainpage" onclick="location.href='index.html'">Back to Main Menu</button>
         </div>     
     </body>
 </html>
